Fix mobile overflow

--- a/styles/_graphics.scss
+++ b/styles/_graphics.scss
@@ -44,6 +44,8 @@
   height: 500px;
   @apply bg-pink;
 
+  overflow: hidden;
+
   .brochure {
     width: 677px;
     position: absolute;
